<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kitti_player</name>
  <version>0.0.0</version>
  <description>A collection of ROS2 nodes to simulate KITTI dataset sensors</description>
  <maintainer email="shantanurahman@iut-dhaka.edu">shantanu404</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>OpenCV</depend>
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>sesnor_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
